[package]
name = "wasm-components"
version = "0.1.0"
authors = ["zhangz <zhangz@hiysg.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
calamine = "0.21.2"
js-sys = "0.3.64"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
  'Document',
  'DomStringMap',
  'DomTokenList',
  'Element',
  'HtmlElement',
  'HtmlBodyElement',
  'HtmlDivElement',
  'HtmlInputElement',
  'Node',
  'NodeList',
  'Event',
  'InputEvent',
  'MouseEvent',
  'EventTarget',
  'KeyboardEvent',
  'ProgressEvent',
  'File',
  'FileReader',
  'FileList',
  'Location',
  'Storage',
  'console',
  'CssStyleDeclaration'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
